--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/WifiDialog.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/WifiDialog.axml
@@ -3,10 +3,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-  
-  <ListView
+
+  <EditText
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/lvPeers" />
+    android:layout_marginTop="4dp"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
+    android:layout_marginBottom="16dp"
+    android:hint="Password"
+    android:id="@+id/etDialogPassword"/>
   
 </LinearLayout>
