--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/Main.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/Main.axml
@@ -10,11 +10,29 @@
         android:layout_height="wrap_content"
         android:text="WiFi Dronection"
         android:gravity="center_horizontal"
-        android:textSize="24dp"
+        android:textSize="40dp"
         android:fontFamily="Assets/OpenSans-Light.ttf"
-        android:layout_margin="10dp" />
-  <ListView
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/lvPeers" />
+        android:layout_margin="20dp" />
+    <ListView
+        android:id="@+id/lvPeers"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">        
+        <Button
+            android:id="@+id/btnHelp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Help"
+            android:fontFamily="Assets/OpenSans-Light.ttf"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:layout_gravity="bottom"
+            android:layout_margin="10dp"
+            android:background="@android:color/holo_blue_dark"
+            android:foreground="#ffffff" />
+    </LinearLayout>
 </LinearLayout>
