--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/WifiDialog.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/WifiDialog.axml
@@ -11,5 +11,6 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
         android:hint="Password"
+        android:inputType="textPassword"
         android:id="@+id/etDialogPassword" />
 </LinearLayout>
