--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
@@ -9,19 +9,19 @@
         android:isScrollContainer="true">
         <TextView
             android:textSize="32dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Controller Settings"
-            android:gravity="center_horizontal" />
+            android:gravity="center_horizontal"
+            android:id="@+id/tvHeaderSettings"/>
     <!-- CONTROL MODE -->
         <RadioGroup
             android:minWidth="25px"
             android:minHeight="25px"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="0dp"
+            android:layout_margin="4dp"
             android:gravity="center_horizontal"
             android:id="@+id/rgControlMethod">
             <RadioButton
@@ -29,23 +29,26 @@
                 android:layout_height="wrap_content"
                 android:checked="true"
                 android:text="Mode 1"
-                android:textSize="14dp"
+                android:textSize="18dp"
+                android:layout_margin="4dp"
                 android:id="@+id/rbThrottleLeft" />
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Mode 2"
-                android:textSize="14dp"
+                android:textSize="18dp"
+                android:layout_margin="4dp"
                 android:id="@+id/rbThrottleRight" />
         </RadioGroup>
     <!-- DESCRIPTION TEXTVIEW -->
         <TextView
             android:id="@+id/tvDescription"
-            android:textSize="10dp"
+            android:textSize="18dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="The left joystick will be used to regulate the throttle and yaw. The right joystick will be used to regulate elevator and roll."
+            android:text="The left joystick will be used to regulate the throttle and yaw. The right joystick will be used to regulate pitch and roll."
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="20dp" />
@@ -56,6 +59,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp" /> -->
     <!-- START BUTTON -->
+      
         <Button
             android:id="@+id/btStart"
             android:textSize="20dp"
@@ -65,6 +69,7 @@
             android:gravity="center_horizontal|center_vertical"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
             android:textColor="#ffffff"
             android:background="#005DA9" />
     <!-- SHOW LOG BUTTON -->
