--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
@@ -9,49 +9,59 @@
         android:isScrollContainer="true">
         <TextView
             android:textSize="32dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:text="Controller Settings"
             android:gravity="center_horizontal"
-            android:id="@+id/tvHeaderSettings"/>
+            android:id="@+id/tvHeaderSettings" />
     <!-- CONTROL MODE -->
-        <RadioGroup
-            android:minWidth="25px"
-            android:minHeight="25px"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:gravity="center_horizontal"
-            android:id="@+id/rgControlMethod">
-            <RadioButton
-                android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:weightSum="1">
+            <RadioGroup
+                android:minWidth="25px"
+                android:minHeight="25px"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="Mode 1"
-                android:textSize="18dp"
+                android:layout_weight=".6"
                 android:layout_margin="4dp"
-                android:id="@+id/rbThrottleLeft" />
-            <RadioButton
-                android:layout_width="wrap_content"
+                android:gravity="center_horizontal|center_vertical"
+                android:layout_gravity="center"
+                android:id="@+id/rgControlMethod">
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="Mode 1"
+                    android:textSize="24dp"
+                    android:layout_margin="10dp"
+                    android:id="@+id/rbThrottleLeft" />
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Mode 2"
+                    android:textSize="24dp"
+                    android:layout_margin="10dp"
+                    android:id="@+id/rbThrottleRight" />
+            </RadioGroup>
+        <!-- DESCRIPTION IMAGEVIEW -->
+            <ImageView
+                android:id="@+id/ivMode"
+                android:src="@drawable/mode1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Mode 2"
-                android:textSize="18dp"
-                android:layout_margin="4dp"
-                android:id="@+id/rbThrottleRight" />
-        </RadioGroup>
-    <!-- DESCRIPTION TEXTVIEW -->
-        <TextView
-            android:id="@+id/tvDescription"
-            android:textSize="18dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="The left joystick will be used to regulate the throttle and yaw. The right joystick will be used to regulate pitch and roll."
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="20dp" />
+                android:layout_weight=".4"
+                android:scaleType="centerInside"
+                android:adjustViewBounds="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp" />
+        </LinearLayout>
     <!-- HEIGHT CONTROL
     <ToggleButton
         android:layout_width="match_parent"
@@ -59,7 +69,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp" /> -->
     <!-- START BUTTON -->
-      
         <Button
             android:id="@+id/btStart"
             android:textSize="20dp"
@@ -67,9 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_margin="10dp"
             android:textColor="#ffffff"
             android:background="#005DA9" />
     <!-- SHOW LOG BUTTON -->
@@ -80,9 +87,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             android:textColor="#ffffff"
             android:background="#005DA9" />
     </LinearLayout>
