--- a/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/Help.axml
+++ b/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/Help.axml
@@ -3,39 +3,26 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/linear2">
-    <TextView
-        android:id="@+id/tvHeader"
+    android:isScrollContainer="true">
+  <TextView
+        android:id="@+id/tvHeaderHelp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Paired devices"
+        android:text="Help"
         android:gravity="center_horizontal"
-        android:textSize="44dp"
+        android:textSize="32dp"
         android:fontFamily="Assets/SourceSansPro-Light.ttf"
         android:layout_margin="20dp" />
     <Button
-        android:id="@+id/btSearchDevices"
+        android:id="@+id/btnBackHelp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Search devices"
-        android:fontFamily="Assets/SourceSansPro-Light.ttf"
+        android:text="Back"
+        android:fontFamily="Assets/SourceSansPro-Light.tff"
         android:textSize="20dp"
         android:gravity="center_horizontal|center_vertical"
         android:layout_gravity="bottom"
         android:layout_margin="10dp"
         android:textColor="#ffffff"
         android:background="#005DA9" />
-    <TextView
-        android:id="@+id/tvExplanation"
-        android:textSize="12dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tap on a device to connect"
-        android:gravity="center_horizontal"
-        android:fontFamily="Assets/SourceSansPro-Light.ttf" />
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:id="@+id/listView" />
 </LinearLayout>
