--- a/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/Main.axml
+++ b/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/Main.axml
@@ -25,7 +25,7 @@
         android:layout_gravity="bottom"
         android:layout_margin="10dp"
         android:textColor="#ffffff"
-        android:background="#005DA9"/>
+        android:background="#005DA9" />
     <Button
         android:id="@+id/btHelp"
         android:layout_width="fill_parent"
@@ -47,7 +47,7 @@
         android:orientation="vertical">
         <ImageView
             android:src="@drawable/ifx_logo"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp" />
