--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
@@ -81,7 +81,7 @@
             android:background="#005DA9" />
     <!-- SHOW LOG BUTTON -->
         <Button
-            android:id="@+id/btShowLog"
+            android:id="@+id/btBackToMain"
             android:textSize="20dp"
             android:text="Show Log"
             android:layout_width="match_parent"
