--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
@@ -58,9 +58,9 @@
                 android:scaleType="centerInside"
                 android:adjustViewBounds="true"
                 android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp" />
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp" />
         </LinearLayout>
     <!-- HEIGHT CONTROL
     <ToggleButton
@@ -79,11 +79,11 @@
             android:layout_margin="10dp"
             android:textColor="#ffffff"
             android:background="#005DA9" />
-    <!-- SHOW LOG BUTTON -->
+    <!-- BACK BUTTON -->
         <Button
             android:id="@+id/btBackToMain"
             android:textSize="20dp"
-            android:text="Show Log"
+            android:text="Back"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
