--- a/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/CustomListItemLayout.axml
+++ b/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/CustomListItemLayout.axml
@@ -7,8 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="Assets/SourceSansPro-Light.ttf"
-        android:textSize="22dp"
+        android:textSize="28dp"
         android:textColor="#005DA9"
-        android:layout_marginLeft="10dp"
+        android:layout_margin="10dp"
         android:text="hello" />
 </RelativeLayout>
