--- a/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/Main.axml
+++ b/Dronection/Android/Bluetooth/BTDronection/BTDronection/Resources/layout/Main.axml
@@ -27,6 +27,18 @@
         android:textColor="#ffffff"
         android:background="#005DA9" />
     <Button
+        android:id="@+id/btLog"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Log files"
+        android:fontFamily="Assets/SourceSansPro-Light.tff"
+        android:textSize="20dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:layout_gravity="bottom"
+        android:layout_margin="10dp"
+        android:textColor="#ffffff"
+        android:background="#005DA9" />
+    <Button
         android:id="@+id/btHelp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
