--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
@@ -29,38 +29,29 @@
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="horizontal"
                 android:layout_gravity="center"
+                android:weightSum="1"
                 android:id="@+id/rgControlMethod">
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:layout_weight=".5">
-                    <RadioButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:text="Mode 1"
-                        android:textSize="24dp"
-                        android:layout_marginBottom="4dp"
-                        android:id="@+id/rbThrottleLeft" />
-                </LinearLayout>
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:layout_weight=".5">
-                    <RadioButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Mode 2"
-                        android:textSize="24dp"
-                        android:layout_marginBottom="4dp"
-                        android:id="@+id/rbThrottleRight" />
-                </LinearLayout>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="Mode 1"
+                    android:textSize="24dp"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginLeft="90dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight=".5"
+                    android:id="@+id/rbThrottleLeft" />
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Mode 2"
+                    android:textSize="24dp"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginLeft="90dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight=".5"
+                    android:id="@+id/rbThrottleRight" />
             </RadioGroup>
         </LinearLayout>
     <!-- DESCRIPTION IMAGEVIEW -->
