--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/Main.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/Main.axml
@@ -39,7 +39,7 @@
         android:id="@+id/btnConnect"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Connect"
+        android:text="Connecting ..."
         android:fontFamily="Assets/SourceSansPro-Light.tff"
         android:textSize="20dp"
         android:gravity="center_horizontal|center_vertical"
