--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerLayout.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerLayout.axml
@@ -28,7 +28,7 @@
             android:gravity="right|center_horizontal"
             android:max="60"
             android:progress="30"
-            android:progressDrawable="@drawable/myseekbar" />
+            android:progressDrawable="@drawable/customseekbar" />
         <TextView
             android:id="@+id/tvTrimValue"
             android:layout_width="20dp"
